packages/edit-site/src/components/sidebar-navigation-item/style.scss
.edit-site-sidebar-navigation-item.components-item {
	color: $gray-600;
	// 6px right padding to align with + button
	padding: $grid-unit-10 6px $grid-unit-10 $grid-unit-20;
	border: none;
	min-height: $grid-unit-50;
	border-radius: $radius-block-ui;

	&:hover,
	&:focus,
	&[aria-current] {
		color: $gray-200;
		background: $gray-800;

		.edit-site-sidebar-navigation-item__drilldown-indicator {
			fill: $gray-200;
		}
	}

	&[aria-current] {
		background: var(--wp-admin-theme-color);
		color: $white;
	}

	.edit-site-sidebar-navigation-item__drilldown-indicator {
		fill: $gray-600;
	}

	&.with-suffix {
		padding-right: $grid-unit-20;
	}
}

.edit-site-sidebar-navigation-screen__content .block-editor-list-view-block-select-button {
	cursor: grab;
	padding: $grid-unit-10;
}

